# cs267finalproject

./: README.md
PyCuda implementation/: main_video.py
PyCuda_implementation/: Disparity.py  compute_disparity_gpu.py  main.py  main_video.py
StereoVisionMultiWay/: CMakeLists copy.txt  CMakeLists.txt
StereoVisionMultiWay/include/: DisparityMapAlgorithmParameters.hpp
StereoVisionMultiWay/src/: CudaDisparityMapGenerator.cpp  CudaFunctions copy.cu  CudaSimdFunctions copy.cu  CudaSimdFunctions.cu  DisparityMapGeneratorFactory.cpp  GenerateDisparityVisualizatioVideo.cpp  GenerateDisparityVisualization.cpp  OpenMpThreadedDisparityMapGenerator.cpp  OpenMpThreadedSimdDisparityMapGenerator.cpp  SingleThreadedDisparityMapGenerator.cpp  SingleThreadedSimdDisparityMapGenerator.cpp  SpeedTest.cpp  readme.md
analysis/: analysis_berk_large.ipynb  data_berks_2.csv  data_berks_large.csv
data/: GenerateDisparityVisualization  IMG_9036_Left.mov  IMG_9036_Right.mov  MOV_0007.MOV  SpeedTest  data.csv  out.csv  requirements.txt
data/CSV/: DisparityResults - All Algo Comparison.csv  DisparityResults - Cuda.csv  DisparityResults - CudaSimd.csv  DisparityResults - FormulaTest.csv  DisparityResults - FormulaTestv2.csv  DisparityResults - Info.csv  DisparityResults - OpenMP.csv  DisparityResults - OpenMPSIMD.csv  DisparityResults - SameImageSimd.csv  DisparityResults - SameImageSimdv2.csv  DisparityResults - SingleThreaded.csv  DisparityResults - SingleThreadedSIMD.csv  DisparityResults - Video FPS.csv  DisparityResults - breakdown.csv
